[gd_scene load_steps=3 format=2]

[ext_resource path="res://sprites/win.ogv" type="VideoStream" id=1]
[ext_resource path="res://tutorial/navigation.gd" type="Script" id=2]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VideoPlayer" type="VideoPlayer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
stream = ExtResource( 1 )
autoplay = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="."]
anchor_left = 0.891
anchor_top = 0.892
anchor_right = 0.893
anchor_bottom = 0.892
margin_left = -63.384
margin_top = -16.2
margin_right = 75.5679
margin_bottom = 18.8
text = "Next"
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Button" to="Button" method="_on_Button_pressed"]
