[gd_scene load_steps=4 format=2]

[ext_resource path="res://sprites/slide9.png" type="Texture" id=1]
[ext_resource path="res://Background.tscn" type="PackedScene" id=2]
[ext_resource path="res://tutorial/navigation.gd" type="Script" id=4]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" parent="." instance=ExtResource( 2 )]
texture = ExtResource( 1 )

[node name="back9" type="Button" parent="."]
anchor_left = 0.037
anchor_top = 0.487
anchor_right = 0.037
anchor_bottom = 0.487
margin_left = -12.888
margin_top = -77.2
margin_right = 11.112
margin_bottom = 77.8
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="skip" type="Button" parent="."]
anchor_left = 0.521
anchor_top = 0.737
anchor_right = 0.521
anchor_bottom = 0.737
margin_left = -88.504
margin_top = -14.2
margin_right = 88.496
margin_bottom = 14.8
text = "Enter Hex High"
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="back9" to="back9" method="_on_back9_pressed"]
[connection signal="pressed" from="skip" to="skip" method="_on_skip_pressed"]
